--- a/www/css/style.css
+++ b/www/css/style.css
@@ -55,6 +55,24 @@
 
 }
 
+.middle_text_gray{
+
+    text-align: center;
+    margin:10px 0 0 0;
+    width:100%;
+    font-family:Î¢ÈíÑÅºÚ;
+    height:20px;
+    line-height:20px;
+    font-size:12px;
+    color: #c1c1c1;
+
+}
+.text_gray{
+    font-size:10px;
+    color: #c1c1c1;
+}
+
+
 .left_text{
 
 
@@ -65,6 +83,17 @@
     color: #c1c1c1;
     font-size:12px;
 }
+.left_text_red{
+
+
+    margin:10px 0 0 0;
+    width:100%;
+    font-family:Î¢ÈíÑÅºÚ;
+    font-size:smaller;
+    color: #c1121b;
+    font-size:12px;
+}
+
 
 
 .bgimg {
@@ -72,37 +101,53 @@
     background-repeat: no-repeat;
 }
 
-.parent_div {
+#comment_parent_div {
     width:100%;
-    height: 90px;
-    background: #F00;
 
 }
-.left_div{
-    width:20%;
-    height: 100%;
-    background: #4dffe2;
+#comment_left_div{
+    width:12%;
     float: left;
 
 }
-.right_div{
-    width:80%;
-    height: 20%;
-    background: #1416ff;
+#comment_right_par_div{
+    width:88%;
+    padding-left: 5px;
+    float: left;
+}
+#comment_middle_div{
+    width:100%;
+    padding-top: 5px;
+    padding-bottom: 10px;
     float:left;
 
 }
-.middle_div{
-    width:80%;
-    height: 60%;
-    background: #1eff4e;
-    float:left;
+#comment_down_div{
+    height:1px;
+    width:100%;
+    background: #e5e5e5;
+    overflow:hidden;
 
 }
-.down_div{
-    width:80%;
-    height: 20%;
-    background: #ff861f;
-    float:left;
 
+.comment_avatar_img {
+    padding-left: 5px;
+    padding-top: 5px;
+    max-width: 40px;
+    max-height: 40px;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%; }
+
+ion-popover-view.fit {
+    height: auto !important;
 }
+
+ion-popover-view.fit ion-content {
+    position: relative !important;
+}
+
+.platform-android ion-popover-view.fit {
+    margin-top: 10px !important;
+}
+
