--- a/www/css/style.css
+++ b/www/css/style.css
@@ -118,6 +118,7 @@
 #comment_middle_div{
     width:100%;
     padding-top: 5px;
+    padding-right: 9px;
     padding-bottom: 10px;
     float:left;
 
